@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.419 2019/07/31 13:23:10 brook Exp $
+# $NetBSD: Makefile,v 1.420 2019/07/31 13:25:00 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -84,6 +84,7 @@ SUBDIR+=	R-prob
 SUBDIR+=	R-quadprog
 SUBDIR+=	R-quantreg
 SUBDIR+=	R-randomForest
+SUBDIR+=	R-relimp
 SUBDIR+=	R-reshape2
 SUBDIR+=	R-sgeostat
 SUBDIR+=	R-shapefiles
