@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3109 2019/07/31 13:23:10 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3110 2019/07/31 13:25:00 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5066,3 +5066,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-forcats version 0.4.0 [brook 2019-07-31]
 	Added math/R-mitools version 2.4 [brook 2019-07-31]
 	Added math/R-nortest version 1.0.4 [brook 2019-07-31]
+	Added math/R-relimp version 1.0.5 [brook 2019-07-31]
